--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hicetnunc-ui",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  },
   "dependencies": {
     "@airgap/beacon-sdk": "^2.3.3",
     "@babel/core": "^7.14.5",
