--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=12.0.0 <=14.0.0",
+    "node": "12.18.3",
     "npm": "6.14.6"
   },
   "dependencies": {
